--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/md5": "^2.3.6",
     "@types/mdx": "^2.0.13",
+    "@types/qrcode": "^1.5.6",
+    "@types/speakeasy": "^2.0.10",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -56,6 +58,7 @@
     "next-safe-action": "^8.0.11",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.10",
+    "qrcode": "^1.5.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-fast-marquee": "^1.6.5",
@@ -63,6 +66,7 @@
     "react-icons": "^5.5.0",
     "resend": "^6.2.2",
     "sonner": "^2.0.7",
+    "speakeasy": "^2.0.0",
     "stripe": "^14.21.0",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
