--- a/env.example
+++ b/env.example
@@ -6,6 +6,7 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 # NextAuth Configuration (Required)
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=your-nextauth-secret
+NEXTAUTH_DEBUG=true
 
 # JWT Configuration for Microservices (Required)
 JWT_SECRET=your-jwt-secret-key-min-32-characters-long
@@ -16,6 +17,7 @@ JWT_AUDIENCE=microservices
 # Google OAuth (Optional)
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=your-google-client-id
 
 # Stripe Configuration (Required for billing)
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_...
