Add audit log feature flag and tests

--- a/env.example
+++ b/env.example
@@ -43,3 +43,9 @@ DEBUG_AUTH=true
 DEBUG_EMAIL=true
 DEBUG_DATABASE=true
 DEBUG_API=true
+
+# Feature Flags (Optional)
+FEATURES__AUDIT_LOG=false
+FEATURES__STRIPE_SUPPORT=false
+NEXT_PUBLIC_FEATURES__AUDIT_LOG=false
+NEXT_PUBLIC_FEATURES__STRIPE_SUPPORT=false
