--- a/package.json
+++ b/package.json
@@ -55,10 +55,10 @@
     "md5": "^2.3.0",
     "motion": "^12.23.24",
     "next": "^15.5.5",
-    "next-auth": "^4.24.11",
+    "next-auth": "4.24.11",
     "next-safe-action": "^8.0.11",
     "next-themes": "^0.4.6",
-    "nodemailer": "^7.0.10",
+    "nodemailer": "^6.9.15",
     "qrcode": "^1.5.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
